--- a/resources/assets/sass/_login.scss
+++ b/resources/assets/sass/_login.scss
@@ -8,10 +8,24 @@ LOGIN STYLING
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  width: 100vw;
+  height: 100vh;
+}
+
+.login_page_wrapper:after {
+  content: "";
+  display: block;
+  background-attachment: fixed;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: rgba( $dark-color, .7 );
+  top:0; left:0;
+  z-index:-1;
 }
 
 .login_page {
-  background-color: rgba( $dark-color, .7 );
   display: flex;
   flex-direction: column;
   align-items: center;
